Single Listing Slider Alignment Issue - Fixed (#1618)
Single Listing Slider Align - Fixed

--- a/assets/src/scss/component/_listing-slider.scss
+++ b/assets/src/scss/component/_listing-slider.scss
@@ -93,6 +93,7 @@
 
 .directorist-single-listing-slider {
   max-width: 100%;
+  margin: 0 auto;
   border-radius: 16px;
   @media screen and (max-width: 991px) {
     max-height: 450px !important;
@@ -156,7 +157,8 @@
 }
 
 .directorist-single-listing-slider-thumb {
-  margin-top: 10px;
+  max-width: 100%;
+  margin: 10px auto 0;
   border-radius: 16px;
   .directorist-swiper {
     @include e(navigation) {
